# shoppy-server

./: .gitignore  pyproject.toml  requirements.txt
core/: db.sqlite3
core/core/: settings.py  urls.py
core/products/: admin.py  models.py  serializers.py  urls.py  views.py
core/products/migrations/: 0001_initial.py  0002_alter_cart_id_alter_category_id_alter_product_id.py  0003_alter_category_image_url_alter_product_image_url.py  0004_rename_image_category_imageurl_and_more.py  0005_category_gender_alter_cart_date.py
