[project]
name = "shoppy-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Rajan66", email = "rajanmaharjan042@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"  # Restrict Python version to >=3.10 and <4

dependencies = [
    "django (>=4.0.0,<5.0.0)",
    "djangorestframework (>=3.12.0,<4.0.0)",
    "pillow (>=8.0.0,<11.0.0)",
    "django-cors-headers (>=3.7.0,<4.0.0)",
    "gunicorn (>=20.1.0,<23.0.0)",
    "whitenoise (>=5.3.0,<6.0.0)",
    "asgiref (>=3.4.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "shoppy_server", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

